--- a/lesson_2/src/index.html
+++ b/lesson_2/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <form action="">
-  <a href="#middle">Go to middle</a>
+  <a href="#middle">Go to middle fff</a>
 
   <section class="   content">
     <main></main>
