--- a/lesson_1/index.html
+++ b/lesson_1/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <form action="">
-    <a href="#middle">Go to middle</a>
+    <a href="#middle">Go to top</a>
 
     <section class="   content">
         <main></main>
