--- a/lesson_2/src/index.html
+++ b/lesson_2/src/index.html
@@ -7,9 +7,9 @@
 </head>
 <body>
 <form action="">
-  <a href="#middle">Go to middle fff</a>
+  <a href="#middle">Go tdsdsdo middle</a>
 
-  <section class="   content">
+  <section class="content">
     <main></main>
   </section>
 
