--- a/lesson_2/src/index.html
+++ b/lesson_2/src/index.html
@@ -7,7 +7,13 @@
 </head>
 <body>
 <form action="">
-  <a href="#middle">Go tdsdsdo middle</a>
+  <!--<a href="">Go tdsdsdo middle</a>-->
+
+  <label>Да<input type="radio" name="kids" value="yes"></label><br>
+  <label>Нет<input type="radio" name="kids" value="no"></label><br>
+  <label>Surname<input type="text" name="surname-3"></label><br>
+
+  <button>Buy</button>
 
 
 
