--- a/lesson_11/index-bem.html
+++ b/lesson_11/index-bem.html
@@ -75,5 +75,45 @@
             </div>
         </div>
     </section>
+
+    <section class="popular-destinations">
+        <div class="section-header">
+            <img alt="" class="section-header__image" src="">
+
+            <h2 class="section-header__title"></h2>
+        </div>
+
+
+        <ul class="holiday-selector">
+            <li class="holiday-selector__option holiday-selector__option_active">
+                <a class="holiday-selector__link" href="">
+                    <img alt="" class="holiday-selector__image" src="">
+                    <span class="holiday-selector__description"></span>
+                </a>
+            </li>
+
+            <li class="holiday-selector__option">
+                <a class="holiday-selector__link" href="">
+                    <img alt="" class="holiday-selector__image" src="">
+                    <span class="holiday-selector__description"></span>
+                </a>
+            </li>
+
+            <li class="holiday-selector__option">
+                <a class="holiday-selector__link" href="">
+                    <img alt="" class="holiday-selector__image" src="">
+                    <span class="holiday-selector__description"></span>
+                </a>
+            </li>
+        </ul>
+
+        <ul class="popular-destinations__cards">
+            <li class="popular-destinations__card">
+                <div class="city-preview">
+                    <img alt="" class="city-preview__imag" src="">
+                </div>
+            </li>
+        </ul>
+    </section>
 </body>
 </html>
