--- a/lesson_20_1/index.html
+++ b/lesson_20_1/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="index.js"></script>
+    <script src="index2.js"></script>
 </head>
 <body>
 
